# Neurassembly

./: .gitignore  Cargo.toml  README.md
benches/: optimization_benchmarks.rs
neurassembly/: Cargo.toml
src/: lib.rs  main.rs
src/api/: mod.rs  routes.rs
src/data/: collector.rs  mod.rs  preprocessor.rs
src/evaluation/: metrics.rs  mod.rs  validator.rs
src/model/: encoder.rs  mod.rs  optimizer.rs  trainer.rs
tests/: collector_tests.rs  encoder_tests.rs  metrics_tests.rs  optimizer_tests.rs  trainer_tests.rs
