[package]
name = "neurassembly"
version = "0.1.0"
edition = "2021"

[dependencies]
# Assembly handling
iced-x86 = "1.20"

# Machine Learning
tch = "0.13"

# Async runtime and web framework
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
tracing = "0.1"
tracing-subscriber = "0.3"
num_cpus = "1.16"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
tempfile = "3.8"

[[bench]]
name = "optimization_benchmarks"
harness = false


